force-app/main/default/objects/refedge__Reward__c/fields/refedge__Comments__c.field-meta.xml
<CustomField>
    <fullName>refedge__Comments__c</fullName>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>