force-app/main/default/objects/refedge__Reward__c/fields/refedge__RewardDate__c.field-meta.xml
<CustomField>
    <fullName>refedge__RewardDate__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>