force-app/main/default/objects/refedge__Reward__c/fields/refedge__Transaction__c.field-meta.xml
<CustomField>
    <fullName>refedge__Transaction__c</fullName>
    <label>Transaction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Issue</fullName>
            </value>
            <value>
                <fullName>Redeem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>