force-app/main/default/objects/refedge__Reward__c/fields/refedge__User__c.field-meta.xml
<CustomField>
    <fullName>refedge__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Rewards</relationshipName>
    <type>Lookup</type>
</CustomField>